# alpha_project

./: Makefile  README.md  VERSION  alpha_debug.py  alpha_diagnostic.py  alpha_genesis.py  alpha_launcher.py  docker-compose.yml  install_alpha.py  main.py  run_alpha.py
audit/: api_state.db
brain/: base_agent.py  brain_router.py  chaos_agent.py  main.py  state_manager_service.py  weighted_voter.py
brain/agents/: market_analyst.py
brain/core/: pipeline.py  strategy_manager.py
brain/inference/: benchmarking.py  local_runner.py  quantization_mgr.py  remote_gateway.py
brain/memory/: context_engine.py  experience_replay.py  knowledge_graph.py  vector_service.py
brain/reasoning/: cot_engine.py  hypothesis_gen.py  xai_logger.py
config/: system_manifest.yaml
config/ai/: adaptive_tuning.json  master_prompt.md
config/communication/: reporting_matrix.yaml
config/data/: ingestion_filters.json  retention_policy.yaml
config/env/: sandbox.env  simulation.env
config/evolution/: growth_policy.yaml
config/finance/: operational_budget.json  treasury_mandate.json
config/hardware/: manifest.json  resource_limits.json  thermal_policy.yaml
config/knowledge/: advisory_standards.yaml  source_credibility.yaml
config/logic/: advisory_standards.yaml  chronos_schedule.json  compliance_filters.yaml  constants.json  constitution.json  recovery_protocols.yaml  strategy_profile.json
config/memory/: context_strategy.yaml
config/network/: proxy_config.yaml  rate_limits.json  service_endpoints.yaml
config/security/: audit_policy.yaml  blackbox_policy.yaml  network_policy.yaml  rotation_policy.yaml
config/simulation/: validation_protocols.yaml
config/storage/: db_routing.yaml
config/user/: investor_profile.json
core/: bridge.py  interfaces.py  loader.py  registry.py  workers.py
data/: هيكله الداتا .txt
data/sources/: هيكلة مشروع API مالي متكاملة.md
docs/api_ref/: brain_service_api.md  rust_engine_api.md  ui_communication_api.md
docs/blueprints/: architecture_overview.md  hardware_integration.md  ipc_communication_flow.md
docs/genetics/: evolutionary_history.md
docs/knowledge_base/: trading_wisdom.md
docs/legal/: data_privacy_policy.md  regulatory_compliance.md
docs/manuals/: nlp_command_dictionary.md  operator_manual.md
engine/: Cargo.toml  build.rs
engine/benches/: matching_bench.rs  risk_bench.rs  transport_bench.rs
engine/logs/: alpha_core.log.2026-02-04  alpha_core.log.2026-02-05
engine/src/: common_types.rs  error.rs  lib.rs  main.rs
engine/src/adapters/: binance_ws.rs  fix_protocol.rs  mock_exchange.rs  mod.rs
engine/src/api/: mod.rs
engine/src/hardware/: affinity_manager.rs  avx_accelerator.rs  mod.rs  telemetry_recorder.rs
engine/src/matching/: engine.rs  inventory_mgr.rs  latency_tracker.rs  match_engine.rs  mod.rs  order_book.rs
engine/src/models/: execution.rs  order.rs
engine/src/risk/: circuit_breaker.rs  engine.rs  margin_guard.rs  mod.rs  pre_trade_check.rs
engine/src/transport/: mod.rs  shared_memory.rs  tcp_server.rs  zmq_bridge.rs
engine/src/utils/: config_loader.rs  logger.rs
engine/tests/: integration_test.rs  matching_logic_test.rs  recovery_test.rs  risk_circuit_test.rs
ops/auto_devops/: analyzer.py  ci_cd_local.py  patch_injector.py  refactorer_agent.py  sanity_test_suite.py  version_control_mgr.py
ops/build_tools/: dart_compiler.py  flatbuffers_compiler.py  proto_compiler.py
ops/monetization/: asset_allocation_eng.py  billing_engine.py  revenue_manager.py  tax_fee_ledger.py
ops/observability/: auto_docs_generator.py  distributed_tracer.py  profiling_agent.py
ops/orchestration/: drift_detector.py  health_recovery_node.py  metabolism_manager.py  sovereign_deployer.py
ops/proving_grounds/: chaos_monkey.py
ops/scripts/: diagnostic.py  launcher.py
ops/telemetry/: alert_dispatcher.py  hardware_health_svc.py  logging_aggregator.py  metrics_exporter.py  network_latency_probe.py
s/: __init__.py  structure.dm
s/intelligence/: __init__.py
s/registry/: catalog.py  compiled_catalog.json
s/toolkit/: __init__.py
schemas/flatbuffers/: risk_report.fbs  trade_event.fbs
schemas/proto/: brain_service.proto  engine_control.proto  evolution_manifest.proto  telemetry_stream.proto
schemas/registry/: __init__.py  manifest.json
scripts/development/: dependency_audit.sh  doc_generator.sh  schema_compiler.sh
scripts/lifecycle/: alpha_reboot.sh  alpha_shutdown.sh  deploy_emergency.sh
scripts/maintenance/: backup_sovereign.sh  data_purger.sh  integrity_fixer.sh
scripts/security/: certificate_rotator.sh  sovereign_keygen.sh
scripts/setup/: env_generator.sh  install_toolchains.sh  provision_db.sh
scripts/testing/: benchmark_all.sh  chaos_runner.sh  stress_test_system.sh
shield/: pyproject.toml
shield/core/: guardian.py
shield/core/proto/: brain_service.proto  brain_service_pb2_grpc.py
shield/crypto/: quantum_keygen.py
shield/forensics/: audit_logger_secure.rs  incident_report_gen.py
shield/nexus/bridge/: brain_uplink.py  data_feed.py  shield_proxy.py
shield/nexus/gateway/: app_entry.py  router.py
shield/nexus/gateway/middleware/: request_id_tagger.py
shield/nexus/interface/api/: command_parser.py  dashboard_endpoints.py
shield/nexus/interface/tui/: key_bindings.py  renderer.py
shield/nexus/interface/tui/widgets/: __init__.py  charts.py
shield/nexus/websocket/: client_handler.py  heartbeat.py  stream_manager.py
shield/panic/: safe_mode_trigger.py  wipe_secrets.sh
shield/perimeter/: anti_poisoning_guard.py  firewall_rules_engine.rs  ids_intrusion_detector.py
shield/sandbox/: docker_manager.py  resource_quota_mgr.py  wasm_runtime.rs
shield/sentinel/: dead_man_switch.py  health_monitor_agent.py  pulse_monitor.rs  self_healing_logic.py
sim_lab/backtest/: fee_calculator.py  replay_engine.py  results_analytics.py  slippage_modeler.py
sim_lab/chaos/: agent_chaos.py  network_jitter.py
sim_lab/digital_twin/: hypothesis_sandbox.py  twin_synchronizer.py
sim_lab/evolution/: fitness_evaluator.py  genetic_optimizer.py  population_mgr.py
ui/: main.py  الواجهه.txt
(+244 files in other folders)
